[package]
name = "actix-actor-pool"
version = "0.3.5"
edition = "2024"
license = "MIT"
description = "Simple implementation of Pool for Actix actors"
documentation = "https://krikunenko-pavel.github.io/actix-actor-pool/actix_actor_pool"
authors = ["Pavel Krikunenko <pavelkrikunenko@yandex.ru>"]
readme = "./README.md"



[dependencies]
actix = "0.13.5"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4", "rng"] }
